main.css
@import url('https://fonts.googleapis.com/css?family=Poppins:600&display=swap');
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');

:root {
  --primary: #ff52bf;
  --neutral1: #ebfbff;
  --neutral2: #00252e;
  --neutral3: #808d99;
}

html {
  font-size: 18px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

p,
span,
a,
button {
  font-family: 'Open Sans', sans-serif;
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
  text-decoration: none;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

img.header-logo {
  width: 100px;
}

.header-button {
  padding: 5px 25px;
  border: none;
  border-radius: 25px;
  font-weight: 700;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
  font-size: 0.6rem;
}

div.hero {
  padding: 20px 10px;
  background-color: var(--neutral1);
  background-image: url('./images/bg-hero-mobile.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  text-align: center;
}

.title {
  font-size: 1.4rem;
  font-weight: 600;
  line-height: 1.7;
  color: var(--neutral2);
}

.hero-text {
  margin: 0 auto;
  width: 85%;
  color: var(--neutral2);
  font-size: 0.8rem;
  line-height: 1.7;
}

button.cta {
  padding: 15px 50px;
  border: none;
  font-size: 0.7rem;
  border-radius: 35px;
  font-weight: 700;
  background: var(--primary);
  color: white;
  opacity: 0.8;
}

img.mockups {
  width: 80%;
}

.mt-5 {
  margin-top: 5rem;
}
.mt-4 {
  margin-top: 4rem;
}
.mt-3 {
  margin-top: 3rem;
}
.mt-2 {
  margin-top: 2rem;
}
.mt-1 {
  margin-top: 1rem;
}

.mb-5 {
  margin-bottom: 5rem;
}
.mb-4 {
  margin-bottom: 4rem;
}
.mb-3 {
  margin-bottom: 3rem;
}
.mb-2 {
  margin-bottom: 2rem;
}
.mb-1 {
  margin-bottom: 1rem;
}

.card {
  text-align: center;
  margin: 20px auto;
  padding: 10px;
  max-width: 85%;
  border-radius: 15px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
}
.card-title {
  font-size: 1rem;
  color: var(--neutral2);
}

.card-text {
  color: var(--neutral3);
  font-size: 0.8rem;
  line-height: 1.7;
  opacity: 0.7;
}

.bottom-section {
  padding: 25px 15px;
  background-color: var(--neutral2);
  color: white;
}

.bottom-logo {
  width: 150px;
}

.location,
.email,
.phone {
  font-size: 0.8rem;
  line-height: 1.7;
}

.location::before {
  content: '';
  width: 20px;
  height: 20px;
  float: left;
  display: block;
  margin: 0 20px 0 0;
  background: url('./images/icon-location.svg') no-repeat;
}

.phone::before {
  content: '';
  width: 20px;
  height: 20px;
  float: left;
  display: block;
  margin: 0 20px 0 0;
  background: url('./images/icon-phone.svg') no-repeat;
}

.email::before {
  content: '';
  width: 20px;
  height: 20px;
  float: left;
  display: block;
  margin: 0 20px 0 0;
  background: url('./images/icon-email.svg') no-repeat;
}

.social {
  width: 100%;
  text-align: center;
}

.social i {
  border: 1px solid white;
  width: 25px;
  height: 25px;
  padding: 10px;
  font-size: 20px;
  border-radius: 50%;
  margin: 0 10px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

p.copy {
  font-size: 0.6rem;
  text-align: center;
}

